After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 745071 - application: Crash when stopping the miners due to destruction of the main window
application: Crash when stopping the miners due to destruction of the main wi...
Status: RESOLVED FIXED
Product: gnome-photos
Classification: Applications
Component: general
3.14.x
Other All
: Normal normal
: ---
Assigned To: GNOME photos maintainer(s)
GNOME photos maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2015-02-24 09:14 UTC by Debarshi Ray
Modified: 2015-02-25 08:46 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
application: Fix a crash when stopping the miners (1.89 KB, patch)
2015-02-24 09:16 UTC, Debarshi Ray
committed Details | Review

Description Debarshi Ray 2015-02-24 09:14:53 UTC
After fixing bug 745070, if you close the main window soon after launching the application, you get a crash like this:

Program received signal SIGSEGV, Segmentation fault.
g_type_check_instance_is_fundamentally_a (
    type_instance=type_instance@entry=0xa78130, 
    fundamental_type=fundamental_type@entry=80) at gtype.c:4028
4028	  node = lookup_type_node_I (type_instance->g_class->g_type);
(gdb) bt
  • #0 g_type_check_instance_is_fundamentally_a
    at gtype.c line 4028
  • #1 g_object_unref
    at gobject.c line 3067
  • #2 g_list_foreach
    at glist.c line 994
  • #3 g_list_free_full
    at glist.c line 217
  • #4 photos_application_dispose
    at photos-application.c line 1002
  • #5 g_object_unref
    at gobject.c line 3133
  • #6 main
    at photos-main.c line 62

Comment 1 Debarshi Ray 2015-02-24 09:16:19 UTC
Created attachment 297742 [details] [review]
application: Fix a crash when stopping the miners