application: Fix a crash when stopping the miners

The list of running miners should not be freed when stopping them.
Cancelling the GCancellable already causes the miner proxy to be
unref'ed and removed from the list.

Fallout from e895aea1b358271bf5f03d01afd9f17c24bbc701

https://bugzilla.gnome.org/show_bug.cgi?id=745071